k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-app
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: backend-app
        image: ghcr.io/joarfj/argocd-demo-backend:5ef32b493c2e341e703bfe1dd5c13305ce2edcd6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
