k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-deployment
  labels:
    app: my-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-python-app
  template:
    metadata:
      labels:
        app: my-python-app
    spec:
      containers:
      - name: my-python-app
        image: ghcr.io/joarfj/argocd-demo:158f4f19d7dbdd1fb889f22ecbb81764692b21a6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
