k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend-app
        image: ghcr.io/joarfj/argocd-demo-frontend:915eefa20bb0605e5fc52ecb2264dc5a97e86ae9
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
