k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    matchLabels:
      app: backend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
