k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    matchLabels:
      app: frontend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
